--- a/sample-nginx-php.yaml
+++ b/sample-nginx-php.yaml
@@ -105,14 +105,14 @@ spec:
 apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
-  name: name-virtual-host-ingress
+  name: sample-app-ingress
   annotations:
     kubernetes.io/ingress.class: "nginx"
   labels:
     app: ingress-nginx
 spec:
   rules:
-  - host: test.ecom-customer-dashb.bluejestic.com
+  - host: test.example.com
     http:
       paths:
       - backend:
